assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    --primary-color: #9fc6cd; /*light blue*/
    --secondary-color: #31343e; /*dark purple*/
    --tertiary-color: #eeeef8; /*light purple*/
    --quaternary-color: #465671;
    --job-img-overlay-color1: rgba(247, 245, 252, 0.452);
    --job-img-overlay-color2: rgba(117, 19, 93, 0.73);

}

body {
    background-color: var(--tertiary-color);
    font-family: Helvetica, Arial, sans-serif;
    color: var(--quaternary-color);
}

/* header start */
header {
    padding: 20px 35px 20px 0px;
    background-color: var(--secondary-color);
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    top: 0;
    /* 
    mock-up gif doens't have a sticky header therefore not including it at this time but if i were to include it it would go like this :
    position: -webkit-sticky;
    position: sticky;
     */
}

header a {
    text-decoration: none;
    color: var(--primary-color);
}

header h1 {
    font-weight: bold;
    font-size: 2vw;
    margin: 0px;
    padding: 0 10px 0 75px;
    background-color: var(--primary-color);
}

header h1 a {
    color: var(--secondary-color);
}

header nav {
    margin: 7px 0;
}

header nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    list-style: none;
  }

header nav ul li {
    display: inline;
}

header nav ul li a {
    padding: 10px 15px;
    font-weight: lighter;
    font-size: 1.55vw;
    text-decoration: underline;
}

/* mock-up gif doens't have mouseover effect on nav or links therefore not including it at this time */

/* header end */

/* hero start */
.hero {
    background-image: url("../images/hero-bg.jpg");
    background-size: cover;
    background-position: center;
    height: 400px;
    position: relative;
}

.hero div {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    font-size: 1.75vw;
    font-weight: bold;
    position: absolute;
    bottom: 20px;
    right: 75px;
    padding: 10px;
}

/* hero end */

/* body / footer content begin */

.body-content {
    width: 80%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 50px auto;
}

.body-content > div {
    padding: 0 20px;
}

.left-content {
    text-align: right;
    border-right: 3px solid var(--quaternary-color);
    flex: 1;
    display: flex;
    flex-wrap: wrap;
}

h2 {
    font-size: 2.5vw;
    color: var(--quaternary-color);
    min-width: 175px;
}

.intro p {
    margin-bottom: 15px;
}

.self-portrait {
    max-width: 200px;
    float: right;
    border: 5px solid var(--primary-color);
    margin: 10px;
}

.right-content {
    flex: 12;
}

/* work grid start */

.grid-work-parent {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 10px;
    height: 400px;
}
.grid-item {
    border: 5px solid var(--primary-color);
    position: relative;
    background-repeat: no-repeat;
    background-size: cover;
}
.grid-work-title {
    position: absolute;
    bottom: 10px;
    margin: 10px 0;
    padding: 10px 15px;
    background-color: var(--primary-color);
    font-weight: bold;
    font-size: 1vw;
}
.grid-work-title span {
    font-size: .75vw;
    font-weight: normal;
}
.grid-work-1{
    grid-column: span 2 / auto;
    grid-row: span 2 / auto;
    /* background-image: url("../images/universe.jpg"); */
    background-image: linear-gradient(to bottom, var(--job-img-overlay-color1), var(--job-img-overlay-color2)),
    url("../images/universe.jpg");
    
}
.grid-work-1:hover{
    background-image: url("../images/universe.jpg");
    
}
.grid-work-2 { 
    /* background-image: url("../images/digital_city.jpg"); */
    background-image: linear-gradient(to bottom, var(--job-img-overlay-color1), var(--job-img-overlay-color2)),
    url("../images/digital_city.jpg");
}
.grid-work-2:hover{
    background-image: url("../images/digital_city.jpg");
    
}
.grid-work-3 { 
    /* background-image: url("../images/digital_poltergeist.jpg"); */
    background-image: linear-gradient(to bottom, var(--job-img-overlay-color1), var(--job-img-overlay-color2)),
    url("../images/digital_poltergeist.jpg");
}
.grid-work-3:hover{
    background-image: url("../images/digital_poltergeist.jpg");
    
}
.grid-work-4 { 
    /* background-image: url("../images/ideas.jpg"); */
    background-image: linear-gradient(to bottom, var(--job-img-overlay-color1), var(--job-img-overlay-color2)),
    url("../images/ideas.jpg");
}
.grid-work-4:hover{
    background-image: url("../images/ideas.jpg");
    
}
.grid-work-5 { 
    /* background-image: url("../images/choose_two.jpg"); */
    background-image: linear-gradient(to bottom, var(--job-img-overlay-color1), var(--job-img-overlay-color2)),
    url("../images/choose_two.jpg");
}
.grid-work-5:hover{
    background-image: url("../images/choose_two.jpg");
    
}

/* work grid end */

footer ul {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    font-size: 1.25vw;
    font-weight: bold;
    margin: auto 20px;
}

footer ul li {
    display: inline-block;
    border-bottom: 3px solid var(--quaternary-color);
}

footer ul li a {
    color: var(--quaternary-color);
    text-decoration: none;
}
/* body / footer content end */

/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@media screen and (max-width: 980px) {
    
    header h1{
        font-size: 3vw;
    }

    header nav ul li a {
        font-size: 2vw;
    }

    h2{
        min-width: 100px;
    }

    footer ul {
        font-size: 1.75vw;
    }
}

/* MEDIA QUERY FOR TABLETS AND SMALLER */
@media screen and (max-width: 768px) {
    header {
        padding: 20px 10px 20px 0px;
    }

    header h1 {
        padding: 10px 10px 10px 35px;
        font-size: 18px;
        text-justify: 
    }

    header nav {
        padding-top: 5px;
    }

    header nav ul li a {
        font-size: 15px;
    }

    header nav ul li a {
        font-size: 15px;
    }

    .hero {
        height: 276px
    }

    .hero div {
        right: 50px;
        font-size: 15px;
    }

    h2{
        /* width: 40px; */
    }

    .grid-work-parent {
        height: 800px;
        grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
    }

    .grid-item,.grid-work-1 {
        grid-column: span 1 / auto;
        grid-row: span 1 / auto;
    }

    .grid-work-title {
        font-size: 20px;
    }

    .grid-work-title span {
        font-size: 15px;
    }

    footer ul {
        font-size: 15px;
        display: block;
    }

    footer ul li {
        margin-bottom: 10px;
        display: block;
        border-bottom: none;
    }

    footer ul li a {
        border-bottom: 3px solid var(--quaternary-color);
    }
}

/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@media screen and (max-width: 575px) {
    header {
        padding: 10px;
        display: block;
    }

    header h1{
        text-align: center;
        background-color: var(--secondary-color);
        font-size: 10vw;
        padding: 0;
    }

    header h1 a{
        color: var(--primary-color);
    }

    nav {
        /* background-color: var(--primary-color); */
        padding: 10px;
    }

    header nav ul {
        justify-content: center;
    }

    nav ul li {
        background: var(--quaternary-color);
        border-radius: 15px;
        margin: 10px;
        padding: 5px;
    }

    nav ul li:hover {
        background: var(--primary-color);
    }

    header nav ul li a  {
        color: var(--primary-color);
        text-decoration: none;
    }

    header nav ul li a:hover  {
        color: var(--secondary-color);
        text-decoration: none;
    }

    .body-content {
        display: block;
        width: 90%
    }

    .left-content {
        text-align: left;
        border-right: none;
        display: block;
        margin: 10px 0;
    }

    h2{
        font-size: 4vw;
        border-bottom: 3px solid var(--quaternary-color);
    }

    .lg-vp{
        display: none;
    }

    .sm-vp{
        display: inline;
    }


}

